--- a/assets/custom.css
+++ b/assets/custom.css
@@ -26,8 +26,11 @@ body {
 }
 
 .main-controls-box {
+    width: 100%;
     display: flex;
-    padding-top: 40px;
+    flex-direction: column;
+    row-gap: 20px;
+    padding-top: 30px;
     padding-bottom: 30px;
 }
 
@@ -35,48 +38,127 @@ body {
     width: 100%;
     align-self: center;
     display: inline-flex;
+    column-gap: 40px;
     /* padding-left: 60px; */
 }
 
-.choices {
-    width: 250px;
+.variables {
+    width: 210px;
     display: flex;
     /* flex-wrap: wrap; */
     flex-direction: column;
     row-gap: 10px;
-    margin-right: 40px;
+    /* margin-right: 40px; */
     align-content: space-between;
 }
 
-.var-choices {
-    width: 250px;
-    display: block;
+.agg-year {
+    width: 210px;
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    row-gap: 10px;
+    /* margin-right: 40px; */
+    align-content: space-between;
 }
 
-.var-choices-dropdown {
+.details {
+    width: 210px;
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    row-gap: 10px;
+    /* margin-right: 40px; */
+    align-content: space-between;
+}
+
+.main-controls label {
+    font-size: 0.9em;
+    color: #757575;
+}
+
+.switches label {
+    font-size: 1em;
+    color: black;
+}
+
+.switches .form-check.form-switch {
+    margin-bottom: 10px;
+}
+
+.var-1 {
+
+}
+
+.var-1-dropdown {
     
 }
 
-.year-choices {
+.var-2 {
+
+}
+
+.var-2-dropdown {
+    
+}
+
+
+.year {
     width: 100px;
     display: block;
 }
 
-.year-choices-dropdown {
+.year-dropdown {
 }
 
+.v-divider {
+    width: 10px;
+    background: linear-gradient(#858585, #858585) no-repeat center/.5px 100%;
+}
+
+.mark-scale {
+    width: 90px;
+}
+.mark-scale-input {
+    width: 100%;
+    height: 35px;
+    border: none;
+    border-bottom: 2px solid #c6c6c6;
+}
+
+.mark-scale-input:focus {
+    border-bottom: 2px solid #0d6efd !important;
+    /* border-bottom-color: #0d6efd; */
+
+}
+
+/* .mark-size-input ::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: black;
+} */
+
 .agg-choices {
-    /* width: 500px; */
+    width: 100%;
+}
+
+/* .agg-choices {
     display: flex;
     flex-direction: column;
     align-content: space-between;
+    column-gap: 10px;
 }
 
 .agg-choices-radio {
     align-self: center !important;
     display: block;
     width: 200px;
-}
+} */
+
+/* .agg-choices-radio label {
+    margin-left: 0 !important;
+} */
 
 .hide-header {
     margin-left: -10px;
@@ -84,9 +166,14 @@ body {
 
 .hide-header-btn {
     background-color: white;
+    color: #0d6efd;
     border: none;
+    font-size: 1.1em;
 }
 
+.details-1 {
+    width: 200px;
+}
 
 /* .separator {
     width: 100%;
@@ -132,7 +219,21 @@ body {
 
 }
 
-
+/* restyle radio items */
+.radio-group .form-check {
+    padding-left: 0;
+}
+  
+.radio-group .btn-group > .form-check:not(:last-child) > .btn {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+  
+.radio-group .btn-group > .form-check:not(:first-child) > .btn {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    margin-left: -1px;
+}
 
 
 
