--- a/assets/custom.css
+++ b/assets/custom.css
@@ -10,13 +10,22 @@ body {
     /* height: 100% !important; */
 }
 
+.top-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 2px;
+    /* background-color: #dc3545; */
+    background-color: #0d6efd;
+}
+
 .header {
     width: 100%;
     /* height: 300px; */
     margin: 0;
     padding: 0;
     padding-top: 25px;
-    padding-left: 60px;
+    padding-left: 40px;
     /* padding-bottom: 25px; */
 }
 
@@ -31,7 +40,7 @@ body {
     flex-direction: column;
     row-gap: 20px;
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
 }
 
 .main-controls {
@@ -50,6 +59,10 @@ body {
     row-gap: 10px;
     /* margin-right: 40px; */
     align-content: space-between;
+}
+
+.details {
+    margin-left: -20px;
 }
 
 .agg-year {
@@ -128,95 +141,75 @@ body {
 
 .mark-scale-input:focus {
     border-bottom: 2px solid #0d6efd !important;
-    /* border-bottom-color: #0d6efd; */
-
 }
-
-/* .mark-size-input ::after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background-color: black;
-} */
 
 .agg-choices {
     width: 100%;
 }
 
-/* .agg-choices {
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    column-gap: 10px;
-}
-
-.agg-choices-radio {
-    align-self: center !important;
-    display: block;
-    width: 200px;
-} */
-
-/* .agg-choices-radio label {
-    margin-left: 0 !important;
-} */
 
 .hide-header {
-    margin-left: -10px;
+    min-width: 100% !important;
+    margin-left: -40px;
+}
+
+.hide-header .hov {
+    visibility: hidden;
+}
+.hide-header:hover .hov {
+    visibility: visible;
 }
 
 .hide-header-btn {
-    background-color: white;
-    color: #0d6efd;
+    margin: 0;
+    width: 100%;
     border: none;
     font-size: 1.1em;
+    -webkit-text-stroke: 1.5px;
+    border-bottom: 3px solid white;
+    padding-bottom: 0;
+}
+
+.hide-header-btn:hover {
+    -webkit-text-stroke: 2px;
+    color: #0d6efd;
+    background-color: white;
+    border-bottom-color: #0d6efd;
 }
 
 .details-1 {
     width: 200px;
 }
 
-/* .separator {
-    width: 100%;
-    position: fixed;
-    top: 0px;
-    height: 100px;
-    display: flex;
-    visibility: hidden;
-    cursor: ns-resize;
-}
-
-.separator-btn {
-    align-self: start;
-    margin-left: 80px;
-    margin-top: 10px;
-} */
 
 .map-box {
     width: 100%;
     height: 1000px;
-    /* position: sticky; */
-    /* top: 0; */
-    /* min-height: 100%; */
 }
 
 .map {
     width: 100%;
     height: 100%;
-    /* position: relative; */
 }
 
 
 .show-header {
     position: fixed;
     top: 0;
-    width: 100%;
-    padding-top: 10px;
-    padding-left: 60px;
+    min-width: 100% !important;
+    padding-left: 0;
+    margin: 0;
     visibility: hidden;
 }
 
 .show-header-btn {
-
+    margin: 0;
+    width: 100%;
+    border: none;
+    font-size: 1.1em;
+    -webkit-text-stroke: 1.5px;
+    border-top: 5px solid #0d6efd;
+    padding-top: 0;
 }
 
 /* restyle radio items */
