--- a/assets/custom.css
+++ b/assets/custom.css
@@ -165,6 +165,9 @@ body {
     visibility: visible;
 } */
 
+button:focus {
+    box-shadow: none !important;
+}
 
 
 .hide-header-btn {
@@ -175,7 +178,8 @@ body {
     border: none;
     font-size: 1.1em;
     -webkit-text-stroke: 1.5px;
-    border-bottom: 4px solid white;
+    border-bottom: 1px solid #6c757d;
+    /* border-bottom: 4px solid white; */
     padding-bottom: 0;
 }
 
@@ -184,7 +188,8 @@ body {
     -webkit-text-stroke: 2px;
     color: #0d6efd;
     background-color: white;
-    border-bottom-color: #0d6efd;
+    /* border-bottom-color: #0d6efd; */
+    border-bottom: 3px solid #0d6efd;
 }
 
 .details-1 {
